--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ion-app>
-  <ion-menu contentId="content" side="start" dir="rtl" [type]="overlay">
+  <ion-menu contentId="content" side="start" [type]="overlay">
     <ion-header>
       <ion-toolbar color="primary">
         <ion-title>תפריט</ion-title>
@@ -8,10 +8,12 @@
 
     <ion-content>
       <ion-list>
-        <ion-item button ion-item *ngFor="let p of pages" [routerLink]="p.link" [routerDirection]="root">
-          <ion-icon slot="start" name="{{p.icon}}" color="secondary"></ion-icon>
-          <ion-label>{{p.title}}</ion-label>
-        </ion-item>
+        <ion-menu-toggle *ngFor="let p of pages">
+          <ion-item details="none" [routerLink]="p.link" [routerDirection]="root">
+            <ion-icon slot="start" name="{{p.icon}}" color="secondary"></ion-icon>
+            <ion-label>{{p.title}}</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
       </ion-list>
     </ion-content>
   </ion-menu>
