--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     </ion-header>
 
     <ion-content>
-      <ion-list>
+      <ion-list class="ion-no-padding">
         <ion-menu-toggle *ngFor="let p of pages">
           <ion-item details="none" [routerLink]="p.link" routerDirection="root">
             <ion-icon slot="start" name="{{p.icon}}" color="secondary"></ion-icon>
