--- a/src/app/components/fab/fab.component.html
+++ b/src/app/components/fab/fab.component.html
@@ -1,3 +1,5 @@
-<p>
-  fab works!
-</p>
+<ion-fab *ngIf="showFab" vertical="top" horizontal="start">
+  <ion-fab-button routerLink="/roy" routerDirection="root" class="blur">
+    <div class="fapBtn">&nbsp;</div>
+  </ion-fab-button>
+</ion-fab>
