--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,6 @@
-<p>
-  footer works!
-</p>
+<ion-footer>
+  <ion-toolbar color="dark">
+    <div class="text-white blur" routerLink="/roy" routerDirection="root">
+      <ion-icon color="white" name="rose"></ion-icon>&nbsp;&nbsp;&nbsp;לזכרו של יקירנו רועי מינץ ז"ל</div>
+  </ion-toolbar>
+</ion-footer>
