--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,18 +4,18 @@
 /** Ionic CSS Variables **/
 :root {
   --ion-color-primary: #b71c1c;
-  --ion-color-primary-rgb: 183, 28, 28;
+  --ion-color-primary-rgb: 183,28,28;
   --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
+  --ion-color-primary-contrast-rgb: 255,255,255;
   --ion-color-primary-shade: #a11919;
   --ion-color-primary-tint: #be3333;
 
-  --ion-color-secondary: #e8df4c;
-  --ion-color-secondary-rgb: 232, 223, 76;
-  --ion-color-secondary-contrast: #000000;
-  --ion-color-secondary-contrast-rgb: 0, 0, 0;
-  --ion-color-secondary-shade: #ccc443;
-  --ion-color-secondary-tint: #eae25e;
+  --ion-color-secondary: #2E7D32;
+  --ion-color-secondary-rgb: 46,125,50;
+  --ion-color-secondary-contrast: #ffffff;
+  --ion-color-secondary-contrast-rgb: 255,255,255;
+  --ion-color-secondary-shade: #286e2c;
+  --ion-color-secondary-tint: #438a47;
 
   --ion-color-tertiary: #5260ff;
   --ion-color-tertiary-rgb: 82, 96, 255;
@@ -65,6 +65,47 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  --ion-color-facebook: #3B5998;
+  --ion-color-facebook-rgb: 59,89,152;
+  --ion-color-facebook-contrast: #ffffff;
+  --ion-color-facebook-contrast-rgb: 255,255,255;
+  --ion-color-facebook-shade: #344e86;
+  --ion-color-facebook-tint: #4f6aa2;
+
+  --ion-color-whatsapp: #075e54;
+  --ion-color-whatsapp-rgb: 7,94,84;
+  --ion-color-whatsapp-contrast: #ffffff;
+  --ion-color-whatsapp-contrast-rgb: 255,255,255;
+  --ion-color-whatsapp-shade: #06534a;
+  --ion-color-whatsapp-tint: #206e65;
+
+  --base-font-size: 10px;
+  --body-font-size: 1.4rem;
+  --title-font-size: 2rem;
+  
+}
+
+body{
+  font-size: var(--body-font-size);
+
+  ion-item {
+    font-size: var(--body-font-size);
+  }
+
+  ion-title, h3{
+    font-size: var(--title-font-size);
+  }
+}
+body.none {
+  --ion-background-color: none; //url(../assets/background.jpg);
+  background-image: url(../assets/background.jpg) !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+
+  ion-menu, ion-popover{
+    --ion-background-color: #E0E0E0;
+  }
 }
 
 // @media (prefers-color-scheme: dark) {
@@ -88,19 +129,19 @@ body.dark {
   // --ion-color-secondary-shade: #46b0e0;
   // --ion-color-secondary-tint: #62ceff;
 
-  --ion-color-primary: #b71c1c;
-  --ion-color-primary-rgb: 183, 28, 28;
+  --ion-color-primary: #4e0e0f;
+  --ion-color-primary-rgb: 78,14,15;
   --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #a11919;
-  --ion-color-primary-tint: #be3333;
+  --ion-color-primary-contrast-rgb: 255,255,255;
+  --ion-color-primary-shade: #450c0d;
+  --ion-color-primary-tint: #602627;
 
-  --ion-color-secondary: #e8df4c;
-  --ion-color-secondary-rgb: 232, 223, 76;
-  --ion-color-secondary-contrast: #000000;
-  --ion-color-secondary-contrast-rgb: 0, 0, 0;
-  --ion-color-secondary-shade: #ccc443;
-  --ion-color-secondary-tint: #eae25e;
+  --ion-color-secondary: #2E7D32;
+  --ion-color-secondary-rgb: 46,125,50;
+  --ion-color-secondary-contrast: #ffffff;
+  --ion-color-secondary-contrast-rgb: 255,255,255;
+  --ion-color-secondary-shade: #286e2c;
+  --ion-color-secondary-tint: #438a47;
 
   --ion-color-tertiary: #6a64ff;
   --ion-color-tertiary-rgb: 106, 100, 255;
@@ -150,6 +191,8 @@ body.dark {
   --ion-color-light-contrast-rgb: 255, 255, 255;
   --ion-color-light-shade: #1e2023;
   --ion-color-light-tint: #383a3e;
+
+  --ion-toolbar-background: blue;
 }
 
 body.high {
@@ -229,6 +272,10 @@ body.high {
   --ion-color-light-contrast-rgb: 255, 255, 255;
   --ion-color-light-shade: #1e2023;
   --ion-color-light-tint: #383a3e;
+}
+
+body.clear {
+  --ion-background-color: #E0E0E0;
 }
 
 /*
