--- a/src/global.scss
+++ b/src/global.scss
@@ -9,6 +9,18 @@
  * https://ionicframework.com/docs/layout/global-stylesheets
  */
 
+@font-face {
+    font-family: 'Arimo';
+    font-style: normal;
+    font-weight: normal;
+    src: url('./assets/fonts/arimo.woff2') format('woff2');
+}
+
+* {
+    font-family: 'Arimo, roboto';
+  }
+
+
 /* Core CSS required for Ionic components to work properly */
 @import "~@ionic/angular/css/core.css";
 
@@ -24,3 +36,10 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+:root {
+    --app-direction: rtl;
+    --ion-font-family:  'Arimo'; 
+    font-family:  'Arimo', 'roboto'!important;
+}
